--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task23/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task23/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task23",
+  "projectId": "f929d960-511a-4e4f-af64-fd89b3937253",
+  "description": "Data Manipulation: Assign set of string (eg: abcdefg), and check the (length, substring, index, Last letters and Remove)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "50587b81-53f8-44ac-9677-b1c99fb29bd4",
       "input": [],
       "output": []
     }
