--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task24/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task24/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task24",
+  "projectId": "2c8a4800-1b59-4c2b-bdce-c674c9be607f",
+  "description": "Assign input value (eg: UiPath Studio) , and replace the word with any other word by using Replace function",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "6cb6897a-a0ae-414f-8153-0f6f8dfb5a6c",
       "input": [],
       "output": []
     }
