--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task26/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task26/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task26",
+  "projectId": "d5b2b6ec-a5c3-4ae9-9f2b-2f0a4a6fda8f",
+  "description": "state Machine",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "8e96f2f3-09de-44ab-a122-4260a1ec4aa5",
       "input": [],
       "output": []
     }
