--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_18/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_18/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_18",
+  "projectId": "908db4f3-21dd-4d86-96d4-8f69ada58901",
+  "description": "Add the data by using multiple Assign Activity (Initialize the row and add the data to rows)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "518c2c2d-ae32-45a2-859e-5c8b674eb193",
       "input": [],
       "output": []
     }
