--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_20/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_20/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_20",
+  "projectId": "36367651-a9bd-4c87-8cba-9a2449d61cb5",
+  "description": "Read the excel (consists of Lower Letters), and type into website (Vajrang.org - Uppercase Task) and get the result and write into one excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "c7dbcfcd-eae1-4d61-9207-481f6c7dcfc9",
       "input": [],
       "output": []
     }
