--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_21/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_21/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_21",
+  "projectId": "789638f0-f357-44fa-84c2-f505d3ff8aed",
+  "description": "Find the temperature of few cities and print the results into Excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "1ad3437e-2f77-40e4-8c9d-5a4084102c48",
       "input": [],
       "output": []
     }
