--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_22/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_22/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_22",
+  "projectId": "d4d7b189-c3be-4dfc-a6e9-648ecdcf7f72",
+  "description": "Vanjrang.org",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "46dbeff6-30c0-4f6a-bf4c-f3f5302da97d",
       "input": [],
       "output": []
     }
