--- a/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_28/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Suvedharan/Task_28/project.json
@@ -1,11 +1,12 @@
 {
-  "name": "Task_4",
-  "projectId": "2e469e01-3ef8-4b32-8483-fed338666072",
-  "description": "Use DateTime Variable and Print the date and time in Text document",
+  "name": "Task_28",
+  "projectId": "7e09a0fd-4c7e-4b6f-b4d0-c7025c7994be",
+  "description": "PDF automation",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.PDF.Activities": "[3.14.1]",
     "UiPath.System.Activities": "[23.10.1]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.1]"
@@ -51,7 +52,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "72416bee-df71-4589-a56d-2df5858c1426",
+      "uniqueId": "b0419b50-5dfb-4b10-b5df-2b556787ca4b",
       "input": [],
       "output": []
     }
