--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task28/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task28/project.json
@@ -1,12 +1,13 @@
 {
-  "name": "Task4",
-  "projectId": "928aea09-e8c3-4ddf-97c4-cb8499a07f75",
-  "description": "Find The Leap Year With Boolean Condition",
+  "name": "Task28",
+  "projectId": "fcb20b48-2e9a-4138-892b-9b83bf766391",
+  "description": "Complete all the PDF activities task in one or two Sequence",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.PDF.Activities": "[3.14.1]",
+    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f444a50a-b1ac-4109-a5bb-58cf05590522",
+      "uniqueId": "bcea11a0-1478-4fe9-9c6e-cd689e8f8ae6",
       "input": [],
       "output": []
     }
