--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task29/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task29/project.json
@@ -1,12 +1,13 @@
 {
-  "name": "Task4",
-  "projectId": "928aea09-e8c3-4ddf-97c4-cb8499a07f75",
-  "description": "Find The Leap Year With Boolean Condition",
+  "name": "Task29",
+  "projectId": "272b3f5c-496e-436c-b337-6320f82ecdb0",
+  "description": "Task on Exceptions(Try catch Finally, Retry, Throw) - Read the excel and write the data into another Sheet",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[23.10.0-preview]",
-    "UiPath.Testing.Activities": "[23.10.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f444a50a-b1ac-4109-a5bb-58cf05590522",
+      "uniqueId": "8624d6df-4766-4238-aecc-c34bd358f241",
       "input": [],
       "output": []
     }
