--- a/SourceCode/2023/Oct2023/Basics/Nazeer/Task5/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Nazeer/Task5/project.json
@@ -2,10 +2,8 @@
   "name": "Task5",
   "projectId": "1ebbf328-34a3-435b-b943-6919179a013c",
   "description": "Additing two different variables",
-  "main": "Main.xaml",
+  "main": "Flowchart.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.1-preview]",
-    "UiPath.Mail.Activities": "[1.20.3]",
     "UiPath.System.Activities": "[23.10.0-preview]",
     "UiPath.Testing.Activities": "[23.10.0-preview]",
     "UiPath.UIAutomation.Activities": "[23.10.0-preview]"
@@ -52,6 +50,12 @@
     {
       "filePath": "Main.xaml",
       "uniqueId": "8d13ba59-db6d-49e2-9e71-ec1ea20fac52",
+      "input": [],
+      "output": []
+    },
+    {
+      "filePath": "Flowchart.xaml",
+      "uniqueId": "d5b6077f-b8e4-413d-acfa-d89c94d58b85",
       "input": [],
       "output": []
     }
