--- a/SourceCode/2023/Nov2023/Rajesh/BlankProcess47/project.json
+++ b/SourceCode/2023/Nov2023/Rajesh/BlankProcess47/project.json
@@ -1,19 +1,19 @@
 {
-  "name": "apisamples",
-  "projectId": "91bcd449-e55d-41e9-887b-a6e66033efc3",
+  "name": "BlankProcess47",
+  "projectId": "d3bdf9fa-bdb4-4bc7-9821-71203ad06fa1",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.10.4]",
-    "UiPath.Mail.Activities": "[1.10.5]",
-    "UiPath.System.Activities": "[21.4.1]",
-    "UiPath.UIAutomation.Activities": "[21.4.4]",
-    "UiPath.WebAPI.Activities": "[1.7.0]"
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "21.4.4.0",
+  "studioVersion": "23.10.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -30,7 +30,7 @@
     "executionType": "Workflow",
     "readyForPiP": false,
     "startsInPiP": false,
-    "mustRestoreAllDependencies": false,
+    "mustRestoreAllDependencies": true,
     "pipType": "ChildSession"
   },
   "designOptions": {
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "ddd2892f-b1e6-4b5a-9559-ee21e0f259bc",
+      "uniqueId": "e50a63cd-d8e7-4cea-b7a6-6e518417a745",
       "input": [],
       "output": []
     }
@@ -59,5 +59,5 @@
   "isTemplate": false,
   "templateProjectData": {},
   "publishData": {},
-  "targetFramework": "Legacy"
+  "targetFramework": "Windows"
 }
