Task1 updated with welcome

--- a/SourceCode/1WeekTraining/Vajrang/apisamples/project.json
+++ b/SourceCode/1WeekTraining/Vajrang/apisamples/project.json
@@ -1,5 +1,6 @@
 {
   "name": "apisamples",
+  "projectId": "c103b9e0-b02f-4154-82e8-38c3be45a887",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
@@ -16,16 +17,21 @@
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
+    "netFrameworkLazyLoading": false,
     "isPausable": true,
+    "isAttended": false,
     "requiresUserInteraction": true,
     "supportsPersistence": false,
+    "workflowSerialization": "DataContract",
     "excludedLoggedData": [
       "Private:*",
       "*password*"
     ],
     "executionType": "Workflow",
     "readyForPiP": false,
-    "startsInPiP": false
+    "startsInPiP": false,
+    "mustRestoreAllDependencies": false,
+    "pipType": "ChildSession"
   },
   "designOptions": {
     "projectProfile": "Developement",
@@ -38,7 +44,8 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true
+    "modernBehavior": true,
+    "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
