--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task 1/project.json
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task 1/project.json
@@ -1,11 +1,9 @@
 {
-  "name": "Task2",
-  "projectId": "32eaf0d6-1069-400d-b0a6-5526800a785a",
-  "description": "Blank Process",
+  "name": "Task 1",
+  "projectId": "722418fe-9ac7-4a19-8ef2-30ca8384238f",
+  "description": "Based on the input we should get the welcome message",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.2]",
-    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -51,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "7f6f71f2-400b-4734-9c42-67d373098185",
+      "uniqueId": "47458f46-fde5-41ef-8348-1fd6b859c742",
       "input": [],
       "output": []
     }
