--- a/SourceCode/2023/Nov2023/Pavankumar/Math Operations/project.json
+++ b/SourceCode/2023/Nov2023/Pavankumar/Math Operations/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "Math Operations",
+  "name": "Task2",
   "projectId": "a137ed56-5d92-4da1-8efe-829b178e236e",
   "description": "Blank Process",
   "main": "Main.xaml",
