--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task3/project.json
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task3/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task 2",
-  "projectId": "9d302cfb-9914-49f6-aed9-814187088588",
-  "description": "Addition of two Numbers (based on input dailogebox and Variables) (Addition, Substraction and multiplications)",
+  "name": "Task3",
+  "projectId": "9d9ffee5-6f4a-41ba-9a8c-8a8900226018",
+  "description": "Use DateTime Variable and Print the date and time in Text document",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -12,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -42,14 +44,14 @@
       "ignoredFiles": []
     },
     "fileInfoCollection": [],
-    "modernBehavior": true,
+    "modernBehavior": false,
     "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "5bd69d86-f3c0-4548-a99e-ce8671683f9f",
+      "uniqueId": "15d48261-2e39-4fd6-904c-3df0b992c5e4",
       "input": [],
       "output": []
     }
