--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 21/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 21/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "Task 30",
-  "projectId": "ffc66c25-14cc-4246-82db-01f668299f3e",
-  "description": "Task on Exceptions( Throw)- Set the condition for bank balance ",
+  "name": "Task 21",
+  "projectId": "eb659197-96c9-43d7-b257-56852f9458c8",
+  "description": "Extract tempreture of few cities and print in excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
-    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.System.Activities": "[23.10.1]",
     "UiPath.Testing.Activities": "[23.10.0]",
-    "UiPath.UIAutomation.Activities": "[23.10.3]"
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "aa8a4576-3afd-42f3-9c17-b8c37f050f6d",
+      "uniqueId": "1bdae475-fd8f-4f57-9673-4f31018632dc",
       "input": [],
       "output": []
     }
