--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 32/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 32/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 30",
-  "projectId": "ffc66c25-14cc-4246-82db-01f668299f3e",
-  "description": "Task on Exceptions( Throw)- Set the condition for bank balance ",
+  "name": "Task 32",
+  "projectId": "b826e433-3034-4a8a-8742-8516ed6ad235",
+  "description": "Extract Emails to Excels (Top 10 to 15)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "aa8a4576-3afd-42f3-9c17-b8c37f050f6d",
+      "uniqueId": "23b59462-5c2c-4e7d-8b2d-bb07e5fb7ad8",
       "input": [],
       "output": []
     }
