--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 25/project.json
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 25/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "Task 30",
-  "projectId": "ffc66c25-14cc-4246-82db-01f668299f3e",
-  "description": "Task on Exceptions( Throw)- Set the condition for bank balance ",
+  "name": "Task 25",
+  "projectId": "dd875f68-cd24-4915-a133-43f6d5e62505",
+  "description": "Extract the information the youtube - title, views, months and print the results in the excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
-    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.System.Activities": "[23.10.1]",
     "UiPath.Testing.Activities": "[23.10.0]",
-    "UiPath.UIAutomation.Activities": "[23.10.3]"
+    "UiPath.UIAutomation.Activities": "[23.10.1]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "aa8a4576-3afd-42f3-9c17-b8c37f050f6d",
+      "uniqueId": "4ca87687-8b35-4481-b619-65c4cef680f7",
       "input": [],
       "output": []
     }
