--- a/SourceCode/2023/Nov2023/Pavankumar/task2/project.json
+++ b/SourceCode/2023/Nov2023/Pavankumar/task2/project.json
@@ -1,8 +1,8 @@
 {
-  "name": "Pavankumar",
-  "projectId": "294a26aa-bd02-4b65-b8a3-6853f1086964",
+  "name": "task2",
+  "projectId": "0a52e00f-9502-4c4f-b437-290d1bf3849e",
   "description": "Blank Process",
-  "main": "task2.xaml",
+  "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
@@ -50,8 +50,8 @@
   "expressionLanguage": "VisualBasic",
   "entryPoints": [
     {
-      "filePath": "task2.xaml",
-      "uniqueId": "5dc9d779-59f9-4e3b-9ff8-a9fb35b51847",
+      "filePath": "Main.xaml",
+      "uniqueId": "178ff6b8-8ce3-41e7-b2e9-08bc41362462",
       "input": [],
       "output": []
     }
