--- a/SourceCode/2023/Nov2023/Pavankumar/task6/project.json
+++ b/SourceCode/2023/Nov2023/Pavankumar/task6/project.json
@@ -1,15 +1,19 @@
 {
-  "name": "Task2",
-  "projectId": "795986fa-c00a-418d-af18-65a7a2f97a70",
+  "name": "task6",
+  "projectId": "90484a3c-76ec-45d1-a931-3f5134ab942b",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.System.Activities": "[22.4.0]"
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "22.4.0.0",
+  "studioVersion": "23.10.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -47,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "5bfdbd74-5a98-4bdb-a774-9bc4ff74e473",
+      "uniqueId": "05caa758-5407-4152-8416-a10e5bf7e20e",
       "input": [],
       "output": []
     }
@@ -55,5 +59,5 @@
   "isTemplate": false,
   "templateProjectData": {},
   "publishData": {},
-  "targetFramework": "Legacy"
+  "targetFramework": "Windows"
 }
