--- a/SourceCode/2023/Nov2023/Srikanth/NewP/project.json
+++ b/SourceCode/2023/Nov2023/Srikanth/NewP/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_1",
-  "projectId": "a74362be-c5cb-4e54-9ac2-2b555c7c0ccc",
-  "description": "Welcome Message",
+  "name": "NewP",
+  "projectId": "a463e9c5-3608-452c-8d5e-ba9101f66fa2",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1-alpha",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "620b97d0-6c55-44a5-a0c4-2a92b6047fcd",
+      "uniqueId": "e2f4d1e8-8b7f-4a64-984a-2fa1b31c67f9",
       "input": [],
       "output": []
     }
