--- a/SourceCode/2023/Nov2023/Srikanth/Task 2/project.json
+++ b/SourceCode/2023/Nov2023/Srikanth/Task 2/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task_1",
-  "projectId": "a74362be-c5cb-4e54-9ac2-2b555c7c0ccc",
-  "description": "Welcome Message",
+  "name": "Task 2",
+  "projectId": "343e63fe-808a-4b63-b5c0-69d089d41b3c",
+  "description": "Addition of two Numbers (based on input dailogebox and Variables) (Addition, Substraction and multiplications)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1-alpha",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "620b97d0-6c55-44a5-a0c4-2a92b6047fcd",
+      "uniqueId": "af3988d6-baaf-4342-a082-cff29c41cc95",
       "input": [],
       "output": []
     }
