--- a/SourceCode/2023/Nov2023/Rajesh/SendingMail/project.json
+++ b/SourceCode/2023/Nov2023/Rajesh/SendingMail/project.json
@@ -1,11 +1,12 @@
 {
-  "name": "BlankProcess47",
-  "projectId": "d3bdf9fa-bdb4-4bc7-9821-71203ad06fa1",
+  "name": "SendingMail",
+  "projectId": "47a3b2eb-66ab-48db-ba5f-dd785172765d",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.MicrosoftOffice365.Activities": "[2.2.7]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -14,7 +15,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.0",
+  "projectVersion": "1.0.1-alpha.1",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -51,7 +52,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "e50a63cd-d8e7-4cea-b7a6-6e518417a745",
+      "uniqueId": "5044bb84-b59b-429f-968f-293d5906ca02",
       "input": [],
       "output": []
     }
