--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 10/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 10/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task 10",
-  "projectId": "850b487d-8804-4671-8bde-31fa599f1c9f",
-  "description": "Blank Process",
+  "projectId": "1d2c410f-fdab-473f-afb2-f0efb179d4db",
+  "description": "Based on user selection from 1 to 7, the message needs to be displayed",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "8e981dff-af29-4275-b9a7-3234b36e7112",
+      "uniqueId": "e577dcd8-a459-4039-b354-e430a0fe50e9",
       "input": [],
       "output": []
     }
