--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 12/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 12/project.json
@@ -1,14 +1,14 @@
 {
-  "name": "Testing",
-  "projectId": "49f9046b-73e7-47bf-a6a1-d429cf2c6806",
-  "description": "Blank Library",
-  "main": "NewActivity.xaml",
+  "name": "Task 12",
+  "projectId": "8627e147-aced-4517-8bc3-aa9a46fd00d7",
+  "description": "Finding max Value in the Arrays",
+  "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "2.22.2",
-    "UiPath.Mail.Activities": "1.21.1",
-    "UiPath.System.Activities": "23.10.2",
-    "UiPath.Testing.Activities": "23.10.0",
-    "UiPath.UIAutomation.Activities": "23.10.3"
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.System.Activities": "[23.10.2]",
+    "UiPath.Testing.Activities": "[23.10.0]",
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -35,7 +35,7 @@
   },
   "designOptions": {
     "projectProfile": "Developement",
-    "outputType": "Library",
+    "outputType": "Process",
     "libraryOptions": {
       "includeOriginalXaml": false,
       "privateWorkflows": []
@@ -48,6 +48,14 @@
     "saveToCloud": false
   },
   "expressionLanguage": "VisualBasic",
+  "entryPoints": [
+    {
+      "filePath": "Main.xaml",
+      "uniqueId": "db4e15c4-504c-4d93-9063-0c799d67bc96",
+      "input": [],
+      "output": []
+    }
+  ],
   "isTemplate": false,
   "templateProjectData": {},
   "publishData": {},
