Updated Task 1 & Task 2
Removed default names for task 1, completed the code for task 2

--- a/SourceCode/2023/Nov2023/Shakeel/Task 1/project.json
+++ b/SourceCode/2023/Nov2023/Shakeel/Task 1/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 2",
-  "projectId": "4d50842e-68aa-4a39-91e8-7155047025bc",
-  "description": "Number Task",
+  "name": "Task1",
+  "projectId": "78363524-22b9-4ac4-ba0b-1a1e305a08cb",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.2]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "8caba702-29e0-4900-b025-5c54674e2120",
+      "uniqueId": "496f5b31-d996-4323-a3aa-b93fd96d68f5",
       "input": [],
       "output": []
     }
