--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 11/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 11/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 10",
-  "projectId": "1d2c410f-fdab-473f-afb2-f0efb179d4db",
-  "description": "Based on user selection from 1 to 7, the message needs to be displayed",
+  "name": "Task 11",
+  "projectId": "19fd1607-1aab-429e-a151-93bef488a725",
+  "description": "As per user Input Fruit should be selected",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.2]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "e577dcd8-a459-4039-b354-e430a0fe50e9",
+      "uniqueId": "a3db84ab-e1ea-4a87-92e9-c1d9b6a17702",
       "input": [],
       "output": []
     }
