--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task 13/project.json
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task 13/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 12",
-  "projectId": "901f313b-f712-4d8c-ba8a-2fc9ae55b170",
-  "description": "Find the Max value from list of Array of Numbers",
+  "name": "Task 13",
+  "projectId": "5378eb23-48a4-499d-b58b-1bb3fb878c0c",
+  "description": "Find the differences between excel and workbook",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0436c255-93c6-45b1-9fd0-3fa55cfc3e80",
+      "uniqueId": "8120dd7e-0b76-48df-8684-cf7d5fcc9015",
       "input": [],
       "output": []
     }
