--- a/SourceCode/2023/Nov2023/Basics/Vineeth/Task 32/project.json
+++ b/SourceCode/2023/Nov2023/Basics/Vineeth/Task 32/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 12",
-  "projectId": "901f313b-f712-4d8c-ba8a-2fc9ae55b170",
-  "description": "Find the Max value from list of Array of Numbers",
+  "name": "Task 32",
+  "projectId": "c292e5b2-8384-41af-b4ad-17541383ee88",
+  "description": "Extract Emails to Excels (Top 10 to 15)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -14,7 +14,7 @@
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "0436c255-93c6-45b1-9fd0-3fa55cfc3e80",
+      "uniqueId": "a9d0a568-93d9-4072-b7b2-74bc3bb59ca6",
       "input": [],
       "output": []
     }
