--- a/SourceCode/2023/Nov2023/sukesh/Task 1/Task_1/project.json
+++ b/SourceCode/2023/Nov2023/sukesh/Task 1/Task_1/project.json
@@ -1,19 +1,20 @@
 {
-  "name": "Task 1",
-  "projectId": "36a120b1-375e-4260-a804-d803f8b8fe5a",
-  "description": "Use of append \r\n\r\n",
+  "name": "Task_1",
+  "projectId": "bccbc287-181a-4736-9b61-acf22f37e190",
+  "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
-    "Facebook.Login": "[1.0.1]",
-    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
-    "UiPath.UIAutomation.Activities": "[23.10.1]"
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "23.10.0.0",
-  "projectVersion": "1.0.1",
+  "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
     "netFrameworkLazyLoading": false,
@@ -50,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "3dc7561f-e70e-4b36-bf2a-d24c898f4dd8",
+      "uniqueId": "c7ae213e-71a0-4249-af24-8f332dcaa5fe",
       "input": [],
       "output": []
     }
