--- a/SourceCode/2023/Nov2023/Mrinali/Task17/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task17/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task17",
+  "projectId": "1efc3a52-e184-4956-9312-c85e9894dfd1",
+  "description": "Generate Data Table from txt file",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "fdeab362-08a6-4f0c-9401-142d1ae4d948",
       "input": [],
       "output": []
     }
