--- a/SourceCode/2023/Nov2023/Mrinali/Task18/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task18/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task18",
+  "projectId": "3343dffe-b9e4-4d09-b303-3638c948f2d5",
+  "description": "Add the data by using multiple Assign Activity (Initialize the row and add the data to rows)",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "a06e34fb-8778-4438-975e-ba66761fd6a5",
       "input": [],
       "output": []
     }
