--- a/SourceCode/2023/Nov2023/Mrinali/Task6/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task6/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task6",
+  "projectId": "d2ed308b-ca9c-4b48-949b-2388b15a926c",
+  "description": "(Assign the values(Fruits/colors) and write in Text file or Append the line",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.System.Activities": "[23.10.2]",
@@ -49,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "e6692fa5-9203-4a89-b3e4-5697ab757956",
       "input": [],
       "output": []
     }
