--- a/SourceCode/2023/Nov2023/Mrinali/Task7/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task7/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task7",
+  "projectId": "410c39c9-fe2e-4145-ba89-9b4674770196",
+  "description": "Assign Multiple values (Numbers) and display in the messagebox through index",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "ba556cb3-1b4c-42f1-af10-99c112f90e66",
       "input": [],
       "output": []
     }
