--- a/SourceCode/2023/Nov2023/Mrinali/Task9/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task9/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task9",
+  "projectId": "49362d1d-3cf5-40b4-a33a-ae7c84afbd2a",
+  "description": "Read the values from the input dailogue box and store the values in Array and write into text file through the index values",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "55ebbf27-68c6-465e-98c3-a22cd447d0fc",
       "input": [],
       "output": []
     }
