--- a/SourceCode/2023/Nov2023/Mrinali/Task20/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task20/project.json
@@ -1,9 +1,10 @@
 {
-  "name": "Task5",
-  "projectId": "758e3d1f-3456-4091-af7a-cbe9e17b70a2",
-  "description": "Generic Variable",
+  "name": "Task20",
+  "projectId": "b325636a-c590-43bd-a468-008e460ab171",
+  "description": "Read the excel (consists of Lower Letters), and type into website (Vajrang.org - Uppercase Task) and get the result and write into one excel",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "70d2b958-5e7b-4b9f-bc69-f821151c13c6",
+      "uniqueId": "93ac3a5b-3274-4964-9cbd-8738a1911c9d",
       "input": [],
       "output": []
     }
