--- a/SourceCode/2023/Nov2023/Mrinali/Task23/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task23/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task7",
-  "projectId": "410c39c9-fe2e-4145-ba89-9b4674770196",
-  "description": "Assign Multiple values (Numbers) and display in the messagebox through index",
+  "name": "Task23",
+  "projectId": "9f2e2549-17e8-474c-8c4d-a12a5ef96196",
+  "description": "Data Manipulation: Assign set of string (eg: abcdefg), and check the (length, substring, index, Last letters and Remove)",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "ba556cb3-1b4c-42f1-af10-99c112f90e66",
+      "uniqueId": "9038fd2b-22d3-4626-a83c-ff3dc0490d60",
       "input": [],
       "output": []
     }
