--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 26/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 26/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task 24",
-  "projectId": "5bfdd94c-bc91-4761-ade0-7f1b11fbee0f",
-  "description": "Assign input value (eg: UiPath Studio) , and replace the word with any other word by using Replace function",
+  "name": "Task 27",
+  "projectId": "c6416574-c9ca-4e6e-81aa-1313aea3162d",
+  "description": "State machine",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "51e20be7-1319-459c-88bf-030c28d88381",
+      "uniqueId": "2175f239-359f-4627-929e-700a584113f4",
       "input": [],
       "output": []
     }
