--- a/SourceCode/2023/Nov2023/Abid/task28/project.json
+++ b/SourceCode/2023/Nov2023/Abid/task28/project.json
@@ -1,11 +1,12 @@
 {
-  "name": "task26",
-  "projectId": "e951f855-4e83-4b2d-91de-71e854d9db00",
+  "name": "task28",
+  "projectId": "f0b58e6d-b508-4d4e-a119-4f51b6922e3f",
   "description": "Blank Process",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.PDF.Activities": "[3.16.0]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -51,7 +52,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "2370d0cf-77b7-474a-9cef-17d806f7cf3b",
+      "uniqueId": "e8625932-94b2-474e-8d25-16841860d44c",
       "input": [],
       "output": []
     }
