--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 27/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 27/project.json
@@ -1,9 +1,10 @@
 {
-  "name": "Task 26",
-  "projectId": "c6416574-c9ca-4e6e-81aa-1313aea3162d",
-  "description": "State machine Use case\r\nGuess Number > Random Number - It should retry if the number is not same\r\nGuess Number<Random Number- it should retry is number is not same\r\nGuess Number = Random - This will be final state",
+  "name": "Task 27",
+  "projectId": "294ec3f4-b427-4451-8795-e0320a7d67c8",
+  "description": "Create a separate sequence for Add and Sub and invoke xaml files into one sequence by using Arguments(Read input values from the excel)",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "2175f239-359f-4627-929e-700a584113f4",
+      "uniqueId": "03b9b054-606f-4ebb-86a0-713f656f5b50",
       "input": [],
       "output": []
     }
