--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 28/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 28/project.json
@@ -1,9 +1,12 @@
 {
-  "name": "Task 26",
-  "projectId": "c6416574-c9ca-4e6e-81aa-1313aea3162d",
-  "description": "State machine Use case\r\nGuess Number > Random Number - It should retry if the number is not same\r\nGuess Number<Random Number- it should retry is number is not same\r\nGuess Number = Random - This will be final state",
+  "name": "Task 28",
+  "projectId": "b429afc4-9895-434f-a065-e6c1923b6d13",
+  "description": "Complete all the PDF activities task in one or two Sequence",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
+    "UiPath.PDF.Activities": "[3.16.0]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +52,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "2175f239-359f-4627-929e-700a584113f4",
+      "uniqueId": "f8c54541-0692-474d-9d2b-45c68a179841",
       "input": [],
       "output": []
     }
