--- a/SourceCode/2023/Nov2023/Mrinali/Task10/project.json
+++ b/SourceCode/2023/Nov2023/Mrinali/Task10/project.json
@@ -1,14 +1,12 @@
 {
-  "name": "Task 27",
-  "projectId": "daf8fe00-885c-4a3d-802d-d33af926d70a",
-  "description": "Create a separate sequence for Add and Sub and invoke xaml files into one sequence by using Arguments(Read input values from the excel)",
+  "name": "Task10",
+  "projectId": "3939051f-30a8-4441-a268-28100151cea3",
+  "description": "Based on user selection from 1 to 7, the message needs to be displayed (Do the task in Sequence) ",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.22.2]",
-    "UiPath.Mail.Activities": "[1.21.1]",
-    "UiPath.System.Activities": "[23.10.1]",
+    "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
-    "UiPath.UIAutomation.Activities": "[23.10.1]"
+    "UiPath.UIAutomation.Activities": "[23.10.3]"
   },
   "webServices": [],
   "entitiesStores": [],
@@ -51,7 +49,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "bba96621-0cb9-42cb-b89a-9edc1a41424f",
+      "uniqueId": "a12652cf-0e84-4b19-b6f6-99aa418fd8bf",
       "input": [],
       "output": []
     }
