--- a/SourceCode/2023/Nov2023/Shailaja/Task_23/project.json
+++ b/SourceCode/2023/Nov2023/Shailaja/Task_23/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "TAsk_13",
-  "projectId": "52766a4a-aaf7-4367-997f-c50414d161fc",
-  "description": "Blank Process",
+  "name": "Task_23",
+  "projectId": "20de372c-33ba-450c-82ba-1c319cc6a1cf",
+  "description": "Data Manipulation: Assign set of string (eg: abcdefg), and check the (length, substring, index, Last letters and Remove)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.2]",
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "ec769450-28a0-4cd5-b526-1073c1b1e9a3",
+      "uniqueId": "af283135-dbca-4d0c-b991-feda68f314ca",
       "input": [],
       "output": []
     }
