--- a/SourceCode/2023/Nov2023/Shailaja/Task_24/project.json
+++ b/SourceCode/2023/Nov2023/Shailaja/Task_24/project.json
@@ -1,9 +1,11 @@
 {
-  "name": "Task_23",
-  "projectId": "20de372c-33ba-450c-82ba-1c319cc6a1cf",
-  "description": "Data Manipulation: Assign set of string (eg: abcdefg), and check the (length, substring, index, Last letters and Remove)",
+  "name": "Task_24",
+  "projectId": "505c210c-1e1b-4b3e-99a2-a5c67fc40a1a",
+  "description": "Assign input value (eg: UiPath Studio) , and replace the word with any other word by using Replace function",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.Excel.Activities": "[2.22.2]",
+    "UiPath.Mail.Activities": "[1.21.1]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -49,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "af283135-dbca-4d0c-b991-feda68f314ca",
+      "uniqueId": "149ab04a-bde0-4429-a93f-874de6dfa485",
       "input": [],
       "output": []
     }
