--- a/SourceCode/2023/Nov2023/Rajashekhar/Task 30/project.json
+++ b/SourceCode/2023/Nov2023/Rajashekhar/Task 30/project.json
@@ -1,10 +1,10 @@
 {
-  "name": "Task 28",
-  "projectId": "b429afc4-9895-434f-a065-e6c1923b6d13",
-  "description": "Complete all the PDF activities task in one or two Sequence",
+  "name": "Task 30",
+  "projectId": "9ca0f523-02a5-4fe2-bea5-8620166c1ad1",
+  "description": "Task on Exceptions( Throw)- Set the condition for bank balance ",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.PDF.Activities": "[3.16.0]",
+    "UiPath.Excel.Activities": "[2.22.2]",
     "UiPath.System.Activities": "[23.10.2]",
     "UiPath.Testing.Activities": "[23.10.0]",
     "UiPath.UIAutomation.Activities": "[23.10.3]"
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "f8c54541-0692-474d-9d2b-45c68a179841",
+      "uniqueId": "1134705e-edc3-452d-9d53-501ca1ac2446",
       "input": [],
       "output": []
     }
