--- a/SourceCode/2023/Dec2023/Gowri/Task9/.local/ProjectSettings.json
+++ b/SourceCode/2023/Dec2023/Gowri/Task9/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"OpenedDocuments":"[\"Main.xaml\"]","ProjectActivitiesViewState":"{}","ProjectBreakpoints":"{\"Value\":{}}"}
+{"OpenedDocuments":"[\"Main.xaml\"]","ProjectActivitiesViewState":"{}","ProjectBreakpoints":"{\"Value\":{}}","ProjectWatches":"{\"Value\":[]}"}
