--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 11/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 11/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 11",
+  "projectId": "df078a6a-14ec-4c37-8b2c-3054d727333c",
+  "description": "Based on user selection from Words like fruits, vegetables , the message needs to be displayed ( flowchart) ",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "0b87f0a9-fadd-4d9d-a399-f0b91bf6b3e4",
       "input": [],
       "output": []
     }
