--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 13/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 13/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 12",
+  "projectId": "9ccee6ca-7215-4733-bf79-d8c2df2cc860",
+  "description": "Find the Max value from list of Array of Numbers",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "cc6e4483-e3d5-43d4-9df0-0e552c3d98f5",
       "input": [],
       "output": []
     }
