--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 6/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 6/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 6",
+  "projectId": "a288b965-0ad8-4b2e-ba77-31c847531775",
+  "description": "Assign the values(Fruits/colors) and write in Text file or Append the line",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "578b6861-100c-4dce-98f6-1d6b1f9b50c4",
       "input": [],
       "output": []
     }
