--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 7/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 7/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 7",
+  "projectId": "b7b3ab76-7d8c-43ae-b066-f73f561757dd",
+  "description": "Assign Multiple values (Numbers) and display in the messagebox through index",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "57ee6594-3cf8-4a0d-994d-40caf2b8d9b1",
       "input": [],
       "output": []
     }
