--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 8/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 8/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 8",
+  "projectId": "5a65150e-35cf-407e-b079-ba80adb8c7ee",
+  "description": "Assign Multiple values (Names) and display in the messagebox through index",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "1b35f22d-e745-4a00-b312-a373e091480f",
       "input": [],
       "output": []
     }
