--- a/SourceCode/2023/Dec2023/Dinesshkumar/Task 5/project.json
+++ b/SourceCode/2023/Dec2023/Dinesshkumar/Task 5/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 3",
-  "projectId": "7688664b-636e-4a93-864e-23c8fa3b40ab",
-  "description": "Blank Process",
+  "name": "Task 5",
+  "projectId": "5da7eda4-2f37-49e9-b971-7e1c658f73d4",
+  "description": "Add two different Variable types and do the Add in final variable(by using Generic Variable type)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.22.3]",
@@ -51,7 +51,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "693a1718-dce6-4ee2-8aed-34ec652c44a5",
+      "uniqueId": "be390fa8-9a31-45a7-80ef-d2dc69563d87",
       "input": [],
       "output": []
     }
