--- a/SourceCode/2024/Feb 2024/Sirisha/Task1/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task1/project.json
@@ -1,5 +1,5 @@
 {
-  "name": "BlankProcess",
+  "name": "Task1",
   "projectId": "588ddd38-f232-45f5-91f4-d04c0aaeab59",
   "description": "Blank Process",
   "main": "Main.xaml",
