Completed Task 1 and Task 2
Display Input Message and Adding of 2 numbers with Dynamic Values

--- a/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 1/project.json
+++ b/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 1/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task 1",
-  "projectId": "4a2f8510-ca7d-49cd-b20e-610dbaaa2740",
-  "description": "Blank Process",
+  "projectId": "61b4608a-cd03-43db-8d11-6e9d83a3dc8b",
+  "description": "Dispaly Message using Input Value",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "b0e432f8-458f-4479-85f3-30d0ac4b2f1e",
+      "uniqueId": "06166c42-5078-45b9-8994-9acf574f450d",
       "input": [],
       "output": []
     }
