--- a/SourceCode/2024/Feb 2024/Sirisha/Task4/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task4/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task4",
   "projectId": "1a59dbce-2361-4cd8-9d33-d65041bd84bb",
-  "description": "leap Year",
+  "description": "leap Year using FlowChart",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
