--- a/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 2/project.json
+++ b/SourceCode/2024/Feb 2024/Mahendar Vukanti/Task 2/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Task 1",
-  "projectId": "4a2f8510-ca7d-49cd-b20e-610dbaaa2740",
-  "description": "Blank Process",
+  "name": "Task 2",
+  "projectId": "b443adb0-f260-4469-a842-a22157847124",
+  "description": "Adding two numbers",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
@@ -50,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "b0e432f8-458f-4479-85f3-30d0ac4b2f1e",
+      "uniqueId": "ae7d532f-ab7b-4283-b36b-b078073c23b6",
       "input": [],
       "output": []
     }
