--- a/SourceCode/2024/Feb 2024/Sirisha/Task6/Task15/.local/install/Task15.Mapper.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task6/Task15/.local/install/Task15.Mapper.json
@@ -1,1 +1,1 @@
-["C:\\Users\\pavan\\OneDrive\\Documents\\GitHub\\RPA-Developer-in-30-Days\\SourceCode\\2024\\Feb 2024\\Sirisha\\Task6\\Task15\\Main.xaml"]
+["C:\\Users\\pavan\\OneDrive\\Documents\\GitHub\\RPA-Developer-in-30-Days\\SourceCode\\2024\\Feb 2024\\Sirisha\\Task6\\Task15\\Main.xaml","C:\\Users\\pavan\\OneDrive\\Documents\\GitHub\\RPA-Developer-in-30-Days\\SourceCode\\2024\\Feb 2024\\Sirisha\\Task6\\Task15\\Using_Workbook_Activity.xaml"]
