--- a/SourceCode/2024/Feb 2024/Sirisha/Task18/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task18/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task18",
   "projectId": "527c80f4-b3bd-4c5d-888c-275964884f62",
-  "description": "Blank Process",
+  "description": "Add the data by using multiple assign activity",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
