--- a/SourceCode/2024/Feb 2024/Sirisha/Task22/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task22/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task22",
   "projectId": "e4b5b7ae-6ead-43cd-95f9-015aa26020de",
-  "description": "Blank Process",
+  "description": "Read the excel (consists of Lower Letters), and type into website (Vajrang.org - Uppercase Task) (by using Add data row add the data into the exce)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
