--- a/SourceCode/2024/Feb 2024/Sirisha/Task25/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task25/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task25",
   "projectId": "79d0bcf3-af7b-4070-9e54-b5a8b96de116",
-  "description": "Blank Process",
+  "description": "Extract the information from Youtube(Automate with Uipath Channel), TItle, view and month and print the result in excel",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
