--- a/SourceCode/2024/Feb 2024/Sirisha/Task19/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task19/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task19",
   "projectId": "202ce211-c4e7-4b6e-85c5-3d34e79c9667",
-  "description": "Extact the data from website and write into text file",
+  "description": "Extract the data from website and write into text file",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.0-preview]",
