--- a/SourceCode/2024/Feb 2024/Anusha k/Task27/project.json
+++ b/SourceCode/2024/Feb 2024/Anusha k/Task27/project.json
@@ -1,20 +1,19 @@
 {
-  "name": "Task26",
-  "projectId": "bfd307e6-b73e-4e5e-9564-c0d111b5d5d5",
-  "description": "Blank Process",
+  "name": "Task27",
+  "projectId": "4ea33d2e-0749-4606-a7ba-b1e48be6570d",
+  "description": "Create a separate sequence for Add and Sub and invoke xaml files into one sequence by using Arguments(Read input values from the excel)",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.23.0-preview]",
-    "UiPath.Mail.Activities": "[1.21.1]",
-    "UiPath.PDF.Activities": "[3.16.0]",
-    "UiPath.System.Activities": "[23.12.0-preview]",
-    "UiPath.Testing.Activities": "[23.12.0-preview]",
-    "UiPath.UIAutomation.Activities": "[23.10.8]"
+    "UiPath.Excel.Activities": "[2.23.2-preview]",
+    "UiPath.Mail.Activities": "[1.22.1]",
+    "UiPath.System.Activities": "[24.2.0-preview]",
+    "UiPath.Testing.Activities": "[24.2.0-preview]",
+    "UiPath.UIAutomation.Activities": "[24.2.0-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
-  "studioVersion": "23.12.0.0",
+  "studioVersion": "24.2.0.0",
   "projectVersion": "1.0.0",
   "runtimeOptions": {
     "autoDispose": false,
@@ -51,7 +50,7 @@
   "entryPoints": [
     {
       "filePath": "Main.xaml",
-      "uniqueId": "c5b3355f-aa4b-46fc-9941-b5b5c8032cdb",
+      "uniqueId": "6ed8d3ec-7496-4982-ac15-25f7c6669856",
       "input": [],
       "output": []
     }
