--- a/SourceCode/2024/Feb 2024/Sirisha/Task30/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task30/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task30",
   "projectId": "a8f7bac9-1b40-4bb7-bb3b-8e3ceb3c6234",
-  "description": "Blank Process",
+  "description": "Task on Exceptions( Throw)- Set the condition for bank balance ",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.2-preview]",
