--- a/SourceCode/2024/Feb 2024/Sirisha/Task31/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task31/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task31",
   "projectId": "c69cd6bb-e083-4d28-9337-c97db693540a",
-  "description": "Blank Process",
+  "description": "Get Password for the emails and display first 5 emails by using for each",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.2-preview]",
