--- a/SourceCode/2024/Feb 2024/Sirisha/Task32/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task32/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task32",
   "projectId": "2fc859cc-f70e-41eb-a7a7-8b6a30e0d69a",
-  "description": "Blank Process",
+  "description": "Extract Emails to Excels (Top 10 to 15)",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.2-preview]",
