--- a/SourceCode/2024/Feb 2024/Sirisha/Task33/project.json
+++ b/SourceCode/2024/Feb 2024/Sirisha/Task33/project.json
@@ -1,7 +1,7 @@
 {
   "name": "Task33",
   "projectId": "1b3f7d52-b6e2-481c-9161-e655e03bae59",
-  "description": "Blank Process",
+  "description": "Send Email to other Emails with Attachments",
   "main": "Main.xaml",
   "dependencies": {
     "UiPath.Excel.Activities": "[2.23.2-preview]",
